--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
         <h3>Repositories</h3>
       </div>
       <div>
-        <h3>Commits</h3>
+        <h3>Repositories</h3>
+        <a href="#" onclick="getRepositories()">Get Repositories</a>
+        <div id="repositories"></div>
       </div>
+      <div>
+      <div>
+        <h3>Commits</h3>
+        <div id="commits"></div>
+      </div>      </div>
     </div>
     <script src="index.js"></script>
   </body>
